<resources>
    <string name="app_name_aee">AEE</string>
    <string name="app_name_rollei">Rollei5S/S60</string>
    <string name="app_name_beastvision">Beastvision</string>
    <string name="app_name_eyecam">eYecam</string>
    <string name="app_name_braun">BRAUN</string>
    <string name="app_name_muvi">Muvi K-Series</string>
    <string name="app_name_miware">MIware App</string>
    <string name="app_name_nilox">NILOX F-60 EVO</string>
    <string name="app_name">Media+</string>
    <string name="app_name_dxg_ironx">IRON-X</string>
    <string name="app_name_dxg_cam">ActionCam!</string>
    <string name="app_name_hpxcam">HP Xcam</string>
    <string name="app_name_benq">BenQ ActionCam</string>
    <string name="app_name_waspcam">WASPcam</string>
    <string name="app_name_actionview">Action View</string>
    <string name="app_name_salix_cam">ACTION CAM HD</string>
    <string name="app_diga">Portable VIErA Link</string>
    <string name="ids_setting_name">Settings</string>
    <string name="ids_loading">Loading…</string>
    <string name="task_affinity_online_browser">com.arcsoft.dlna.contents.online</string>
    <string name="task_affinity_local_browser">com.arcsoft.dlna.contents.local</string>
    <string name="task_affinity_local_player">com.arcsoft.dlna.contents.player</string>
    <string name="ids_warning_wifi_off_dmc">Cannot start DMC, please check if the Wi-Fi is on.</string>
    <string name="ids_warning_renderer_offline">Renderer [ %1$s ] is offline.</string>
    <string name="ids_warning_server_offline">Server [ %1$s ] is offline.</string>
    <string name="ids_warning_renderer_conflict">Renderer [ %1$s ] is connected.</string>
    <string name="ids_unknowname">Unknown name</string>
    <string name="ids_no_contents">No photos and videos</string>
    <string name="ids_not_support">Not supported!</string>
    <string name="ids_common_ok">OK</string>
    <string name="ids_common_cancel">Cancel</string>
    <string name="ids_common_yes">Yes</string>
    <string name="ids_common_no">No</string>
    <string name="ids_common_close">Close</string>
    <string name="ids_common_setting">Setting</string>
    <string name="ids_common_more">More</string>
    <string name="ids_common_refresh">Refresh</string>
    <string name="ids_content_local">Local content</string>
    <string name="ids_content_broadcast">Broadcast</string>
    <string name="ids_contextmenu_title">Menu</string>
    <string name="ids_contextmenu_pushto">Push to</string>
    <string name="ids_contextmenu_play">Play</string>
    <string name="ids_contextmenu_view">Large view</string>
    <string name="ids_contextmenu_info">Information</string>
    <string name="ids_contextmenu_download">Download</string>
    <string name="ids_contextmenu_upload">Upload</string>
    <string name="ids_contextmenu_uploadcancel">Cancel upload</string>
    <string name="ids_sort_title">Sort</string>
    <string name="ids_sort_field_name">Name</string>
    <string name="ids_sort_field_artist">Artist</string>
    <string name="ids_sort_field_album">Album</string>
    <string name="ids_sort_field_genre">Genre</string>
    <string name="ids_sort_field_time">Time</string>
    <string name="ids_sort_field_size">Size</string>
    <string name="ids_sort_field_title">Title</string>
    <string name="ids_media_type_image">Photo</string>
    <string name="ids_media_type_video">Video</string>
    <string name="ids_media_type_audio">Music</string>
    <string name="ids_info_title">File information</string>
    <string name="ids_info_name">"File name: "</string>
    <string name="ids_info_date">"Date: "</string>
    <string name="ids_info_time_added">"Added time: "</string>
    <string name="ids_info_time_modified">"Modified time: "</string>
    <string name="ids_info_time_taken">"Taken time: "</string>
    <string name="ids_info_resolution">"Resolution: "</string>
    <string name="ids_info_size">"File size: "</string>
    <string name="ids_info_type">"Type: "</string>
    <string name="ids_info_aperture">"Aperture: "</string>
    <string name="ids_info_focal_length">"Focal length: "</string>
    <string name="ids_info_iso">"ISO: "</string>
    <string name="ids_info_shutter_speed">"Shutter speed: "</string>
    <string name="ids_info_tag">"Tag: "</string>
    <string name="ids_info_director">"Director: "</string>
    <string name="ids_info_starring">"Starring: "</string>
    <string name="ids_info_country">"Country/Region: "</string>
    <string name="ids_info_duration">"Duration: "</string>
    <string name="ids_info_album">"Album: "</string>
    <string name="ids_info_artist">"Artist: "</string>
    <string name="ids_info_genre">"Genre: "</string>
    <string name="ids_info_item_title">"Title: "</string>
    <string name="ids_info_composer">"Composer: "</string>
    <string name="ids_info_next">"Next: "</string>
    <string name="ids_info_dmr">"Media render: "</string>
    <string name="ids_info_channel">"Channel name: "</string>
    <string name="ids_info_unknown">Unknown</string>
    <string name="ids_sdcard_mediascanning">Media scanning …</string>
    <string name="ids_warning_no_sdcard">Please insert SD card.</string>
    <string name="ids_warning_no_dms">No device found.</string>
    <string name="ids_warning_no_dmr">No Digital Media Renderer found.</string>
    <string name="ids_warning_dms_disconnected">The active device disconnected.</string>
    <string name="ids_warning_dmr_disconnected">The active Digital Media Renderer disconnected.</string>
    <string name="ids_warning_set_dmr_first">Please set Digital Media Renderer first.</string>
    <string name="ids_warning_set_dms_first">Please connect the camera first.</string>
    <string name="ids_warning_match_failed">Match capability failed, maybe you cannot watch it in remote device.</string>
    <string name="ids_warning_seturi_failed">Sorry, set play address failed.</string>
    <string name="ids_warning_press_again_to_exit">Press again to exit.</string>
    <string name="ids_player_cannot_play">Cannot play this file.</string>
    <string name="ids_player_error_play_next">Cannot play this file, go on playing the next file.</string>
    <string name="ids_unencrypted_wifi">AP is not using encryption. Cannot play.</string>
    <string name="ids_warning_low_memory">Not enough memory.</string>
    <string name="ids_warning_low_android_data">Not enough internal storage.</string>
    <string name="ids_warning_no_size_for_cache">no enough available size in sdcard, cache files cannot be saved</string>
    <string name="ids_warning_no_size_for_launch">no enough available size in sdcard, application cannot start</string>
    <string name="ids_warning_clear_data">Clear data. Please wait.</string>
    <string name="ids_settings_select_device">Select device</string>
    <string name="ids_settings_select_render">Select renderer</string>
    <string name="ids_settings_content_access">Download quality</string>
    <string name="ids_settings_clear_cache">Clear</string>
    <string name="ids_settings_about">About</string>
    <string name="ids_settings_support_living_view">Live viewing</string>
    <string name="ids_settings_reset">Clear</string>
    <string name="ids_settings_reset_device_playto">Clear device for Play To</string>
    <string name="ids_settings_change_rtsp_url">RTSP server address</string>
    <string name="ids_settings_deleting">Deleting files, please wait...</string>
    <string name="ids_setting_dmr">DMR</string>
    <string name="ids_setting_dmr_key">preference_dmr</string>
    <string name="ids_setting_dmr_key_udn">preference_dmr_udn</string>
    <string name="ids_setting_dmr_key_name">preference_dmr_name</string>
    <string name="ids_setting_dmr_title">Digital Media Render</string>
    <string name="ids_setting_dmr_dialog">DMR selection</string>
    <string name="ids_setting_dmr_slection">Render selection</string>
    <string name="ids_setting_dms">DMS</string>
    <string name="ids_setting_dms_key">preference_dms</string>
    <string name="ids_setting_dms_key_udn">preference_dms_udn</string>
    <string name="ids_setting_dms_key_name">preference_dms_name</string>
    <string name="ids_setting_dms_title">Device</string>
    <string name="ids_setting_dms_title_diga">Digital Media Server</string>
    <string name="ids_setting_wifi">Wi-Fi</string>
    <string name="ids_setting_wifi_key">preference_wifi</string>
    <string name="ids_setting_wifi_title">Wi-Fi settings</string>
    <string name="ids_setting_wifi_summary">Set up and manage wireless access points.</string>
    <string name="ids_setting_local_dms">Local DMS</string>
    <string name="ids_setting_local_dms_enable_key">preference_local_dms_enable</string>
    <string name="ids_setting_local_dms_summary_on">Local DMS is enabled.</string>
    <string name="ids_setting_about">About</string>
    <string name="ids_setting_about_key">preference_about</string>
    <string name="ids_setting_download_destination">Destination to transfer</string>
    <string name="ids_setting_download_destination_dialog">Choose destination to download</string>
    <string name="ids_setting_download_destination_key">preference_download_destination</string>
    <string name="ids_easytransfer_list">List of registered Easy transfer</string>
    <string name="ids_easytransfer_new">New registration</string>
    <string name="ids_easytransfer_list_no_contents">There is no Easy transfer registered</string>
    <string name="ids_easytransfer_setting">Easy transfer settings</string>
    <string name="ids_easytransfer_name">DIGA selection</string>
    <string name="ids_easytransfer_name_key">preference_easytransfer_name</string>
    <string name="ids_easytransfer_range">Transfer period</string>
    <string name="ids_easytransfer_range_key">preference_easytransfer_range</string>
    <string name="ids_easytransfer_time">Transfer start time</string>
    <string name="ids_easytransfer_time_key">preference_easytransfer_start_time</string>
    <string name="ids_easytransfer_move">Allow to move the programs</string>
    <string name="ids_easytransfer_move_key">preference_easytransfer_move</string>
    <string name="ids_easytransfer_power">Enabled only when plugged in</string>
    <string name="ids_easytransfer_power_key">preference_easytransfer_power</string>
    <string name="ids_menu_slide_show_setting">Slide show settings</string>
    <string name="ids_slideshow_key_effect">slideshow_effect</string>
    <string name="ids_slideshow_key_interval">slideshow_interval</string>
    <string name="ids_slideshow_title_effect">Slide show effect</string>
    <string name="ids_slideshow_title_interval">Slide show interval</string>
    <string name="normal">Normal</string>
    <string name="lomowarmcolor">Lomo</string>
    <string name="lomocoldcolor">Lake</string>
    <string name="lomodarkcorner">Simple</string>
    <string name="lomomagic">Magic</string>
    <string name="lomosoft">Elegant</string>
    <string name="polaroid">Polaroid</string>
    <string name="polaroid_impressive">Sunkiss</string>
    <string name="polaroid_romantic">Romantic</string>
    <string name="polaroid_autumn">Autumn</string>
    <string name="washedaway">Faded</string>
    <string name="gothic">Gothic</string>
    <string name="deepquite">Eternal</string>
    <string name="colorfilter_mexico">Mexican</string>
    <string name="colorfilter_greenfield">Grassy</string>
    <string name="colorfilter_bluedepression">Azure</string>
    <string name="colorfilter_purplelove">Violet</string>
    <string name="colorfilter_silentfilm">Silent</string>
    <string name="sweetvintage">Sweet</string>
    <string name="cartoon">Cartoon</string>
    <string name="blackwhite">B&amp;W</string>
    <string name="softskin">Beauty</string>
    <string name="sketch">Sketch</string>
    <string name="gentlecool">Cool</string>
    <string name="dialog_msg_def_setting_cmd">Are you sure to restore?</string>
    <string name="str_aee_stream_state_connection_fail">"Failure

Connection？"</string>
</resources>