<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/selectbox_bg_top" android:layout_width="@dimen/Cmd_Choice_View_Width" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/Setting_Item_Text_Size" android:textColor="#ffffffff" android:gravity="left" android:id="@id/cur_cmd_title" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ids_settings_select_device" />
        <ImageView android:id="@id/cmd_title_divider" android:layout_width="fill_parent" android:layout_height="3.0px" android:src="@drawable/cmd_list_line" android:layout_below="@id/cur_cmd_title" />
        <TextView android:textSize="@dimen/Setting_Item_Text_Size" android:textColor="#ffffffff" android:gravity="left|center" android:id="@id/cmd_msg" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:minHeight="?android:listPreferredItemHeight" android:text="@string/dialog_msg_def_setting_cmd" />
        <LinearLayout android:orientation="horizontal" android:id="@id/cmd_btn_layout" android:background="@drawable/selectbox_bg_bottom" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip">
            <Button android:textSize="@dimen/Setting_Item_Text_Size" android:textColor="#ff000000" android:gravity="center" android:id="@id/cmd_ok_btn" android:background="@drawable/selectbox_bottom_btn" android:layout_width="fill_parent" android:layout_height="54.0dip" android:text="@string/ids_common_yes" android:layout_weight="1.0" />
            <Button android:textSize="@dimen/Setting_Item_Text_Size" android:textColor="#ff000000" android:gravity="center" android:id="@id/cmd_cancle_btn" android:background="@drawable/selectbox_bottom_btn" android:layout_width="fill_parent" android:layout_height="54.0dip" android:text="@string/ids_common_no" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/selectbox_shaw" />
</LinearLayout>