<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/aee_whole_bg_repeat" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="center" android:id="@id/stream_title_layout" android:background="@drawable/video_stream_aee_title_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <ImageView android:id="@id/stream_title_logo" android:background="@drawable/video_stream_title_logo" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/connect_btns_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:id="@id/connect_wifi_view" android:background="@drawable/aee_connect_top" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/connect_btn_view" android:background="@drawable/aee_connect_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/connect_fail_text" android:paddingLeft="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_aee_stream_state_connection_fail" android:layout_alignLeft="@id/connect_btn_view" android:layout_alignTop="@id/connect_btn_view" android:layout_alignRight="@id/connect_btn_view" android:layout_alignBottom="@id/connect_btn_view" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/connect_check_btns_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
            <CheckBox android:textSize="20.0sp" android:id="@id/connect_check_yes_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@drawable/aee_connect_btn_check" android:text="@string/ids_common_yes" />
            <CheckBox android:textSize="20.0sp" android:id="@id/connect_check_no_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:checked="false" android:button="@drawable/aee_connect_btn_check" android:text="@string/ids_common_no" android:layout_toRightOf="@id/connect_check_yes_btn" />
        </RelativeLayout>
    </LinearLayout>
    <TextView android:gravity="center_vertical" android:id="@id/stream_version_bar" android:background="@drawable/video_stream_aee_version_bar" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:layout_alignParentBottom="true" />
</RelativeLayout>